<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/login_page_margin"
    android:gravity="center">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_title"
        android:textColor="@color/black"
        android:textSize="@dimen/app_title_size" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_edit_text_margin_t"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/guide_line_text_color" />

    <EditText
        android:id="@+id/passwd_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_edit_text_margin_t"
        android:layout_marginBottom="@dimen/login_edit_text_margin_b"
        android:hint="@string/passwd_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/guide_line_text_color" />

    <LinearLayout
        android:id="@+id/auto_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwd_edit_text"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_login"
            android:layout_marginStart="@dimen/login_button_margin_l"
            android:textColor="@color/black"
            android:textSize="@dimen/guide_text_size" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/forget_member_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/login_edit_text_margin_b"
            android:gravity="end"
            android:layout_marginEnd="@dimen/login_button_margin_r"
            android:text="@string/forget_member_info"
            android:textColor="@color/guide_line_text_color"
            android:textSize="@dimen/guide_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/go_main_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/auto_login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/login_button_margin_l"
        android:layout_marginEnd="@dimen/login_button_margin_r"
        android:layout_marginBottom="@dimen/login_edit_text_margin_b"
        android:text="@string/login" />

    <TextView
        android:id="@+id/create_member_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/go_main_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_edit_text_margin_b"
        android:text="@string/create_member_guide"
        android:textColor="@color/guide_line_text_color"
        android:textSize="@dimen/guide_text_size" />

    <Button
        android:id="@+id/create_member_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_member_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/login_button_margin_l"
        android:layout_marginEnd="@dimen/login_button_margin_r"
        android:layout_marginBottom="@dimen/login_edit_text_margin_b"
        android:text="@string/create_member" />

    <Button
        android:id="@+id/login_kakao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_member_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/login_button_margin_l"
        android:layout_marginEnd="@dimen/login_button_margin_r"
        android:text="@string/kakao_login" />

</RelativeLayout>