<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/login_page_margin"
        android:layout_marginTop="@dimen/login_page_margin"
        android:layout_marginEnd="@dimen/login_page_margin"
        android:layout_marginBottom="@dimen/login_page_margin"
        android:gravity="center">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up_title"
            android:textColor="@color/black"
            android:textSize="@dimen/app_title_size" />

        <LinearLayout
            android:id="@+id/id_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_text_view"
            android:layout_marginTop="@dimen/login_edit_text_margin_t"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sign_up_id"
                style="@style/EditTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/login_button_margin_r"
                android:layout_weight="9"
                android:hint="@string/sign_up_id_guide"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/overlap_check_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up_overlap_check" />

        </LinearLayout>

        <EditText
            android:id="@+id/sign_up_password"
            style="@style/EditTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_container"
            android:layout_marginTop="@dimen/login_edit_text_margin_t"
            android:hint="@string/sign_up_password_guide"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/sign_up_password_check"
            style="@style/EditTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_password"
            android:layout_marginTop="@dimen/login_edit_text_margin_t"
            android:hint="@string/sign_up_password_check_guide"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/sign_up_name"
            style="@style/EditTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_password_check"
            android:layout_marginTop="@dimen/login_edit_text_margin_t"
            android:hint="@string/sign_up_name_guide"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sign_up_nick_name"
            style="@style/EditTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_name"
            android:layout_marginTop="@dimen/login_edit_text_margin_t"
            android:hint="@string/sign_up_nick_guide"
            android:inputType="textPersonName" />

        <LinearLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_nick_name"
            android:layout_marginTop="@dimen/login_edit_text_margin_t"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sign_up_email"
                style="@style/EditTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/sign_up_email_guide"
                android:inputType="textEmailAddress" />

            <Spinner
                android:id="@+id/email_dropbox"
                style="@style/EditTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_container"
            android:layout_marginTop="@dimen/login_edit_text_margin_t"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/phone_dropbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2" />

            <EditText
                android:id="@+id/sign_up_phone"
                style="@style/EditTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_up_email"
                android:layout_gravity="center_vertical"
                android:layout_weight="8"
                android:hint="@string/sign_up_phone_guide"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_container"
            android:layout_marginTop="@dimen/login_edit_text_margin_t"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_up_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/login_button_margin_r"
                android:layout_weight="1"
                android:text="@string/sign_up_back" />

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up_title" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>